--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,7 +1,7 @@
+tap "ariga/tap"
 tap "elastic/tap"
 tap "facebook/fb"
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
 tap "homebrew/services"
 tap "jdx/tap"
 tap "mackerelio/mackerel-agent"
@@ -20,6 +20,7 @@ brew "ansible"
 brew "zstd"
 brew "jpeg-xl"
 brew "aom"
+brew "arp-scan"
 brew "glib"
 brew "at-spi2-core"
 brew "autoconf"
@@ -29,6 +30,7 @@ brew "bash"
 brew "libssh2"
 brew "libgit2"
 brew "bat"
+brew "binutils"
 brew "bit-git"
 brew "boost"
 brew "bottom"
@@ -37,13 +39,6 @@ brew "freetype"
 brew "fontconfig"
 brew "pixman"
 brew "cairo"
-brew "gdk-pixbuf"
-brew "harfbuzz"
-brew "icu4c@76"
-brew "libavif"
-brew "pango"
-brew "librsvg"
-brew "chafa"
 brew "chezmoi"
 brew "cmake"
 brew "node"
@@ -62,13 +57,17 @@ brew "fastfetch"
 brew "fd"
 brew "open-mpi"
 brew "fish"
+brew "harfbuzz"
 brew "libtool"
+brew "pango"
 brew "fontforge"
 brew "frum"
 brew "fsevent_watch"
 brew "fzf"
+brew "libavif"
 brew "gd"
 brew "gdbm"
+brew "gdk-pixbuf"
 brew "gh"
 brew "ghostscript"
 brew "ghq"
@@ -86,6 +85,7 @@ brew "pkgconf"
 brew "gobject-introspection"
 brew "gpgme"
 brew "netpbm"
+brew "librsvg"
 brew "graphviz"
 brew "gsettings-desktop-schemas"
 brew "hicolor-icon-theme"
@@ -95,8 +95,10 @@ brew "gtk+3"
 brew "httpie"
 brew "hub"
 brew "hyperfine"
+brew "icu4c@76"
 brew "shared-mime-info"
 brew "imagemagick"
+brew "iperf3"
 brew "jemalloc"
 brew "jj"
 brew "joshuto"
@@ -117,6 +119,7 @@ brew "libxslt"
 brew "llvm@15"
 brew "lsd"
 brew "lua"
+brew "luajit"
 brew "luarocks"
 brew "luv"
 brew "lynx"
@@ -124,26 +127,24 @@ brew "memcached", restart_service: :changed
 brew "mercurial"
 brew "ninja"
 brew "meson"
-brew "usage", link: false
 brew "mise"
 brew "msgpack"
 brew "ncdu"
-brew "neofetch"
 brew "tree-sitter"
 brew "neovim"
 brew "nghttp2"
 brew "nkf"
+brew "nmap"
 brew "node-build"
+brew "ollama"
 brew "openshift-cli"
-brew "openssl@1.1"
 brew "osx-cpu-temp"
 brew "pcre"
 brew "peco"
-brew "pidof"
 brew "pngquant"
 brew "poppler"
 brew "prettierd"
-brew "protobuf@3"
+brew "protobuf@29"
 brew "python@3.11"
 brew "redis"
 brew "ripgrep"
@@ -155,6 +156,7 @@ brew "scons"
 brew "sheldon"
 brew "sk"
 brew "source-to-image"
+brew "squashfs"
 brew "starship"
 brew "stylua"
 brew "telnet"
@@ -164,6 +166,7 @@ brew "tmux"
 brew "tmux-mem-cpu-load"
 brew "tree"
 brew "unixodbc"
+brew "uv"
 brew "v8"
 brew "vips"
 brew "viu"
@@ -174,25 +177,31 @@ brew "yarn"
 brew "yt-dlp"
 brew "zoxide"
 brew "zplug"
+brew "ariga/tap/atlas"
 brew "elastic/tap/elasticsearch-full"
 brew "facebook/fb/idb-companion"
 brew "mackerelio/mackerel-agent/mkr"
 brew "minamijoyo/myaws/myaws"
 brew "rhysd/hgrep/hgrep"
 brew "teamookla/speedtest/speedtest"
+cask "1password"
+cask "1password-cli"
 cask "alt-tab"
 cask "appcleaner"
 cask "aquaskk"
-cask "arc"
 cask "aws-vault"
+cask "chatgpt"
 cask "chromedriver"
+cask "claude"
+cask "deadbeef@nightly"
 cask "discord"
 cask "firefox"
 cask "flutter"
-cask "ghostty"
+cask "foobar2000"
 cask "git-credential-manager"
 cask "google-cloud-sdk"
 cask "hammerspoon"
+cask "karabiner-elements"
 cask "lastpass"
 cask "neovide"
 cask "notion"
