--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -2,17 +2,16 @@
 bat = "latest"
 bun = "latest"
 delta = "latest"
-eza = "latest"
+deno = "latest"
 fd = "latest"
 fzf = "latest"
 gh = "latest"
 ghq = "latest"
-go = "latest"
 lazygit = "latest"
 node = "latest"
 python = "latest"
 ripgrep = "latest"
-rust = "nightly"
+# rust = "nightly"
 starship = "latest"
 tmux = "latest"
 usage = "latest"
