--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -11,6 +11,7 @@ lazygit = "latest"
 node = "latest"
 python = "latest"
 ripgrep = "latest"
+ruby = "latest"
 # rust = "nightly"
 starship = "latest"
 tmux = "latest"
